# abyss

./: .gitignore  .pylintrc  LICENSE  README.md  conf.py  config.py  config_file.py  main.py  main_conf.py  main_train.py  pyproject.toml  requirements.txt  requirements_dev.txt  test.py
abyss/: __init__.py  augmentation_file.py  config.py  config_file.py  main.py  main_train.py
abyss/config/: __init__.py  config_helpers.py  config_manager.py
abyss/data/: create_datalist.py  create_dataset.py
abyss/data_cleaner/: __init__.py  data_cleaner.py  file_finder.py  layout_parser.py  restructure.py
abyss/data_reader/: __init__.py  data_reader.py  file_finder.py  restructure.py
abyss/dataset/: __init__.py  data_analyzer.py  data_cleaner.py  data_restruct.py  data_selection.py  dataset_analyzer.py  dataset_init_path_scan.py  layout_parser.py  pull_data_set.py
abyss/engine/: inference.py  scheduler.py  sliding_window.py  trainer.py
abyss/losses/: loss.py
abyss/models/: create_network.py  model.py
abyss/post_processing/: post_processing.py
abyss/pre_processing/: __init__.py  pre_processing.py  pre_processing_helpers.py
abyss/production/: extract_weights.py  inference.py  post_processing.py
abyss/training/: __init__.py  asd.py  augmentation.py  create_classification_label.py  create_datalist.py  create_dataset.py  create_datasets.py  create_hdf5.py  create_network.py  create_train_datasets.py  create_trainset.py  create_trainset_hdf5.py  data_augmentation.py  data_module.py  dataset.py  dataset_fingerprint.py  evaluator.py  generic_trainer.py  h5py template  h5template.py  inference.py  inferrer.py  loss.py  metrics.py  model.py  models.py  net.py  net_architecture.py  nets.py  network_definitions.py  primer.py  run_training.py  scheduler.py  show_batch.py  sliding_window.py  train.py  train_ignite.py  trainer.py  trainer_ignite.py  training.py  (+1 more)
abyss/transforms/: transforms.py
abyss/utilities/: data_path_memory.py  utils.py
abyss/utils/: __init__.py  dataset_fingerprint.py  production.py  show_batch.py  utils.py
envs/: requirements.txt
src/: data_loader.py  dataset.py  main.py  net.py  train.py  transform.py  utils.py
src/abyss/: __init__.py  __main__.py  config_file.py
src/config/: config_helpers.py  (+1 more)
transfer/: adaptation_plan.json
(+60 files in other folders)
