[tool.poetry]
name = "abyss"
version = "0.1.0"
description = ""
authors = ["melandur <account@qunit.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
monai = "^1.3.0"
pytorch-ignite = "^0.5.0.post2"
scikit-learn = "1.3.2"
scikit-image = "0.21.0"
tqdm = "^4.66.4"
nibabel = "^5.2.1"
lightning = "^2.2.4"
loguru = "^0.7.2"
tensorboardx = "^2.6.2.2"
rich = "^13.7.1"
tensorboard = "2.14.0"
six = "^1.16.0"
simpleitk = "^2.3.1"
matplotlib = "3.7.2"
torchcontrib = "^0.0.2"
#nibabel = "^5.2.1"
torchio = "0.19.1"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
skip-string-normalization = true