[tool.poetry]
name = "abyss"
version = "0.1.0"
description = ""
authors = ["melandur <account@qunit.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
torch = "^2.5.1"
numpy = "1.26.4"
lightning = "^2.4.0"
nibabel = "^5.3.2"
simpleitk = "^2.4.0"
monai = "^1.4.0"
loguru = "^0.7.2"
batchgeneratorsv2 = "^0.2.1"
tensorboardx = "^2.6.2.2"
tensorboard = "^2.18.0"
rich = "^13.9.4"
acvl-utils = "^0.2.2"
matplotlib = "^3.9.2"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
skip-string-normalization = true